@@ -1,3 +1,6 @@
+2004-07-20: [Jacques]
+* add index_logic_op and color_logic_op
+
 LablGL 1.01:
 ------------
 2004-07-13: [Jacques]
